ex-1.10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timestamp-service
spec:
  selector:
    app: timestamp-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
